<resources>
    <string name="app_name">RoomMate</string>
    <string name="textview">TextView</string>
    <string name="button4">Button</string>
    <string name="button3">Button</string>
    <string name="atras">Atras</string>
    <string name="siguiente">Siguiente</string>
    <string name="nombre_del_usuario">Nombre del usuario:</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="numero_de_compa_eros_0">Numero de compañeros: 0</string>
    <string name="escribe_tu_nombre_aqu">Escribe tu nombre aquí</string>
    <string name="actualizar">Actualizar</string>
    <string name="bot_n_restar_pulsado_n_mero_de_compa_eros">"Botón restar pulsado, número de compañeros: "</string>
    <string name="pulsa_el_bot_n">Pulsa el botón</string>
    <string name="bot_n_pulsado">Botón Pulsado</string>
    <string name="activar">Activar</string>
    <string name="activarse">Activar</string>
    <string name="introduce_tu_alquiler_aqu">Introduce tu alquiler aquí</string>
    <string name="alquiler">Alquiler</string>
    <string name="introduce_un_alquiler">Introduce un alquiler</string>
    <string name="el_alquiler_debe_estar_entre_100_y_2500">El alquiler debe estar entre 100 € y 2500 €</string>
    <string name="alquiler_v_lido">Alquiler válido</string>
    <string name="introduce_un_alquiler2">Introduce un alquiler</string>
    <string name="alquiler_fuera_de_rango">Alquiler fuera de rango</string>
</resources>